--- a/index.html
+++ b/index.html
@@ -16,22 +16,44 @@
 	<nav class="header-menu navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xs-1"></div>
+				<div class="col-xs-1">
+					<div class="menu-list-xs">
+						<div class="dropdown">
+							<a class="dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+								<ion-icon name="menu"></ion-icon>
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+								<li><a href="index.html">首页</a></li>
+								<li><a href="./html/hottopic.html">前沿</a></li>
+								<li><a href="./html/journal.html">期刊</a></li>
+								<li><a href="./html/conference.html">会议</a></li>
+								<li><a href="./html/paper.html">论文</a></li>
+								<li><a href="./html/data.html">数据</a></li>
+								<li><a href="./html/tool.html">工具</a></li>
+								<li><a href="./html/technology.html">技术</a></li>
+								<li><a href="./html/special.html">专题</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
 				<div class="col-xs-10">
 					<div class="row">
 						<div class="col-lg-4">
 							<a class="logo-title" href="index.html"><img src="img/logo.png" width="60" height="60" alt="GeoScience"> GeoScience.top</a>
 						</div>
 						<div class="menu-list col-lg-8">
-							<a href="index.html" class="current-page">首页</a>
-							<a href="./html/hottopic.html">前沿</a>
-							<a href="./html/journal.html">期刊</a>
-							<a href="./html/conference.html">会议</a>
-							<a href="./html/paper.html">论文</a>
-							<a href="./html/data.html">数据</a>
-							<a href="./html/tool.html">工具</a>
-							<a href="./html/technology.html">技术</a>
-							<a href="./html/special.html">专题</a>
+							<div class="menu-list-lg">
+								<a href="index.html" class="current-page">首页</a>
+								<a href="./html/hottopic.html">前沿</a>
+								<a href="./html/journal.html">期刊</a>
+								<a href="./html/conference.html">会议</a>
+								<a href="./html/paper.html">论文</a>
+								<a href="./html/data.html">数据</a>
+								<a href="./html/tool.html">工具</a>
+								<a href="./html/technology.html">技术</a>
+								<a href="./html/special.html">专题</a>
+							</div>
 						</div>
 					</div>
 				</div>
