--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 						<div class="dropdown">
 							<a class="dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 								<ion-icon name="menu"></ion-icon>
-								<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-								<li><a href="index.html">首页</a></li>
+								<li><a href="index.html"><ion-icon name="planet"></ion-icon></a></li>
 								<li><a href="./html/hottopic.html">前沿</a></li>
 								<li><a href="./html/journal.html">期刊</a></li>
 								<li><a href="./html/conference.html">会议</a></li>
@@ -44,7 +43,7 @@
 						</div>
 						<div class="menu-list col-lg-8">
 							<div class="menu-list-lg">
-								<a href="index.html" class="current-page">首页</a>
+								<a href="index.html" class="current-page"><ion-icon name="planet"></ion-icon></a>
 								<a href="./html/hottopic.html">前沿</a>
 								<a href="./html/journal.html">期刊</a>
 								<a href="./html/conference.html">会议</a>
@@ -58,50 +57,75 @@
 					</div>
 				</div>
 				<div class="col-xs-1">
-					<a href="###"><ion-icon name="person"></ion-icon></a>
+					<div class="dropdown">
+							<a class="dropdown-toggle" type="button" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+								<ion-icon name="person"></ion-icon>
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownUser">
+								<li><a href="./html/aboutus.html"><ion-icon name="contact"></ion-icon> 关于我们</a></li>
+								<li><a href="./html/aboutsite.html"><ion-icon name="compass"></ion-icon> 关于网站</a></li>
+							</ul>
+						</div>
 				</div>
 			</div>
 			
 		</div>
 	</nav>
+	
 	<!-- 正文部分  start -->
 	<div class="home-page container-fluid">
 		<div class="row">
-			<div class="col-lg-12">
-				<div id="myCarousel" class="carousel slide">
-					<!-- 轮播（Carousel）指标 -->
-					<ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-					</ol>   
-					<!-- 轮播（Carousel）项目 -->
-					<div class="carousel-inner">
-						<div class="item active">
-							<img src="img/hot-main/img-hot-01.jpg" alt="First slide">
-							<div class="title carousel-caption">标题 1</div>
-						</div>
-						<div class="item">
-							<img src="img/hot-main/img-hot-01.jpg" alt="Second slide">
-							<div class="title carousel-caption">标题 2</div>
-						</div>
-						<div class="item">
-							<img src="img/hot-main/img-hot-01.jpg" alt="Third slide">
-							<div class="title carousel-caption">标题 3</div>
+			<div class="col-lg-1"></div>
+			<div class="col-lg-10">
+				<!-- 路径导航、菜单工具栏  start -->
+				<ol class="breadcrumb">
+					<li class="active"><a href="#"><ion-icon name="planet"></ion-icon> 主页</a></li>
+				</ol>
+				<div class="row">
+					<div class="col-lg-8">
+						<div id="myCarousel" class="carousel slide">
+							<!-- 轮播（Carousel）指标 -->
+							<ol class="carousel-indicators">
+								<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+								<li data-target="#myCarousel" data-slide-to="1"></li>
+								<li data-target="#myCarousel" data-slide-to="2"></li>
+							</ol>   
+							<!-- 轮播（Carousel）项目 -->
+							<div class="carousel-inner">
+								<div class="item active">
+									<img src="img/hot-main/img-hot-01.jpg" alt="First slide">
+									<div class="title carousel-caption">标题 1</div>
+								</div>
+								<div class="item">
+									<img src="img/hot-main/img-hot-01.jpg" alt="Second slide">
+									<div class="title carousel-caption">标题 2</div>
+								</div>
+								<div class="item">
+									<img src="img/hot-main/img-hot-01.jpg" alt="Third slide">
+									<div class="title carousel-caption">标题 3</div>
+								</div>
+							</div>
+							<!-- 轮播（Carousel）导航 -->
+							<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+								<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+								<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
 						</div>
 					</div>
-					<!-- 轮播（Carousel）导航 -->
-					<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
+					<div class="col-lg-4">
+						<div class="news-right">
+							
+						</div>
+					</div>
 				</div>
 				
 			</div>
+			<div class="col-lg-1"></div>
 		</div>
 	</div>
 	
