--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 	<!-- 正文部分  start -->
 	<div class="home-page container-fluid">
 		<div class="row">
-			<div class="col-lg-1"></div>
-			<div class="col-lg-10">
+			<div class="col-lg-2"></div>
+			<div class="col-lg-8">
 				<!-- 路径导航、菜单工具栏  start -->
 				<ol class="breadcrumb">
 					<li class="active"><a href="#"><ion-icon name="planet"></ion-icon> 主页</a></li>
 				</ol>
 				<div class="row">
-					<div class="col-lg-8">
+					<div class="col-md-7">
 						<div id="myCarousel" class="carousel slide">
 							<!-- 轮播（Carousel）指标 -->
 							<ol class="carousel-indicators">
@@ -117,7 +117,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-md-5">
 						<div class="news-right">
 							
 						</div>
@@ -125,10 +125,10 @@
 				</div>
 				
 			</div>
-			<div class="col-lg-1"></div>
+			<div class="col-lg-2"></div>
 		</div>
 	</div>
-	
+	<hr>
 	<div class="main-page-home container-fluid">
 		<div class="row">
 			<div class="col-lg-8">.col-md-8</div>
