--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<!-- 头部导航栏部分  start -->
 	<nav class="header-menu navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
+			<canvas id="canvas-pop" style="position:fixed"></canvas>
 			<div class="row">
 				<div class="col-xs-1">
 					<div class="menu-list-xs">
@@ -74,7 +75,7 @@
 	</nav>
 	
 	<!-- 正文部分  start -->
-	<div class="home-page container-fluid">
+	<div class="main-page container-fluid">
 		<div class="row">
 			<div class="col-lg-2"></div>
 			<div class="col-lg-8">
@@ -83,7 +84,7 @@
 					<li class="active"><a href="#"><ion-icon name="planet"></ion-icon> 主页</a></li>
 				</ol>
 				<div class="row">
-					<div class="col-md-7">
+					<div class="col-md-8">
 						<div id="myCarousel" class="carousel slide">
 							<!-- 轮播（Carousel）指标 -->
 							<ol class="carousel-indicators">
@@ -98,11 +99,11 @@
 									<div class="title carousel-caption">标题 1</div>
 								</div>
 								<div class="item">
-									<img src="img/hot-main/img-hot-01.jpg" alt="Second slide">
+									<img src="img/hot-main/img-hot-02.jpg" alt="Second slide">
 									<div class="title carousel-caption">标题 2</div>
 								</div>
 								<div class="item">
-									<img src="img/hot-main/img-hot-01.jpg" alt="Third slide">
+									<img src="img/hot-main/img-hot-03.jpg" alt="Third slide">
 									<div class="title carousel-caption">标题 3</div>
 								</div>
 							</div>
@@ -117,9 +118,62 @@
 							</a>
 						</div>
 					</div>
-					<div class="col-md-5">
-						<div class="news-right">
-							
+					<div class="col-md-4">
+						<div class="news-right shadow-md">
+							最新动态，综合资讯
+						</div>
+					</div>
+				</div>
+				<!-- 各个版块 -->
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="item-block">
+							最新版块动态
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="item-block">
+							最新版块动态
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="item-block">
+							最新版块动态
+						</div>
+					</div>
+				</div>
+				<!-- 各个版块 -->
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="item-block">
+							最新版块动态
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="item-block">
+							最新版块动态
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="item-block text-center g-bg-white">
+							<div class="row">
+								<div class="col-xs-6">
+									<p><i class="icon-wechat"></i>官方微信公众号</p>
+									<img src="img/wechat-code.jpg">
+								</div>
+								<div class="col-xs-6">
+									<p><i class="icon-sina"></i>官方微博</p>
+									<img src="img/wechat-code.jpg">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- 其他 -->
+				<div class="row">
+					<div class="col-md-12">
+						<div class="item-spectial">
+							版块
 						</div>
 					</div>
 				</div>
@@ -129,12 +183,6 @@
 		</div>
 	</div>
 	<hr>
-	<div class="main-page-home container-fluid">
-		<div class="row">
-			<div class="col-lg-8">.col-md-8</div>
-			<div class="col-lg-4">.col-md-4</div>
-		</div>
-	</div>
 	
 	
 	
@@ -146,7 +194,7 @@
 	
 	<!-- 底部footer  start -->
 	<footer>
-		<img class="footer-logo" src="img/logo-footer.png" width="50" alt>
+		<img class="footer-logo" src="img/logo.png" width="50" alt>
 		<a href="#">联系我们</a><span>|</span>
 		<a href="#">技术援助</a><span>|</span>
 		<a href="#">合作交流</a><span>|</span>
@@ -164,6 +212,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 	<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+	<script src="./js/cpop.js" type="text/javascript"></script>
 </body>
 
 </html>
