--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					<div class="col-sm-4">
 						<div class="item-block">
 							<div class="portlet">
-								<p class="portlet-title"><ion-icon name="document"></ion-icon><span> 论文进展</span></p>
+								<p class="portlet-title"><ion-icon name="document"></ion-icon><span> 学术论文</span></p>
 								
 							</div>
 						</div>
@@ -178,12 +178,12 @@
 								<p class="portlet-title"><ion-icon name="heart"></ion-icon><span> 关注我们</span></p>
 								<div class="row">
 									<div class="col-xs-6 text-center">
-										<p><i class="icon-wechat"></i>官方微信公众号</p>
-										<img src="img/wechat-code.jpg">
+										<p><i class="icon-wechat"></i>微信公众号</p>
+										<img src="img/brand/wechat-code.jpg">
 									</div>
 									<div class="col-xs-6 text-center">
 										<p><i class="icon-sina"></i>官方微博</p>
-										<img src="img/wechat-code.jpg">
+										<img src="img/brand/sina.jpg">
 									</div>
 								</div>
 							</div>
@@ -204,7 +204,9 @@
 						<div class="item-spectial">
 							<div class="portlet">
 								<p class="portlet-title"><ion-icon name="git-merge"></ion-icon><span> 友情链接</span></p>
-								
+									<a class="links-a" href="http://gaohr.win/" target="_blank"><img src="img/brand/gaohr.win.jpg"></a>
+									<a class="links-a" href="http://gaohr.win/" target="_blank"><img src="img/brand/gaohr.win.jpg"></a>
+									<a class="links-a" href="http://gaohr.win/" target="_blank"><img src="img/brand/gaohr.win.jpg"></a>
 							</div>
 						</div>
 					</div>
@@ -228,6 +230,8 @@
 			<div class="col-lg-2"></div>
 		</div>
 	</div>
+	<!-- Share -->
+	<div id="shareit"></div>
 	<hr>
 	
 	
