--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 									</div>
 									<div class="col-xs-6 text-center">
 										<p><i class="icon-sina"></i>官方微博</p>
-										<img src="img/brand/sina.jpg">
+										<img src="img/brand/sina-code.jpg">
 									</div>
 								</div>
 							</div>
