--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<div class="col-sm-4">
 						<div class="item-block">
 							<div class="portlet">
-								<p class="portlet-title"><ion-icon name="contacts"></ion-icon><span> 期刊信息</span><a href="./html/journal.html">[more...]</a></p>
+								<p class="portlet-title"><ion-icon name="filing"></ion-icon><span> 期刊信息</span><a href="./html/journal.html">[more...]</a></p>
 								
 							</div>
 						</div>
