--- a/html/data.html
+++ b/html/data.html
@@ -21,10 +21,10 @@
 					<div class="menu-list-xs">
 						<div class="dropdown">
 							<a class="dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-								<ion-icon name="menu"></ion-icon>
+								<i class="icon ion-md-menu"></i>
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-								<li><a href="../index.html"><ion-icon name="planet"></ion-icon></a></li>
+								<li><a href="../index.html"><i class="icon ion-md-planet"></i></a></li>
 								<li><a href="./hottopic.html">前沿</a></li>
 								<li><a href="./journal.html">期刊</a></li>
 								<li><a href="./conference.html">会议</a></li>
@@ -44,7 +44,7 @@
 						</div>
 						<div class="menu-list col-lg-8">
 							<div class="menu-list-lg">
-								<a href="../index.html"><ion-icon name="planet"></ion-icon></a>
+								<a href="../index.html"><i class="icon ion-md-planet"></i></a>
 								<a href="./hottopic.html">前沿</a>
 								<a href="./journal.html">期刊</a>
 								<a href="./conference.html">会议</a>
@@ -60,12 +60,12 @@
 				<div class="col-xs-1">
 					<div class="dropdown">
 							<a class="dropdown-toggle" type="button" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-								<ion-icon name="person"></ion-icon>
+								<i class="icon ion-md-person"></i>
 								<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="dropdownUser">
-								<li><a href="./aboutus.html"><ion-icon name="contact"></ion-icon> 关于我们</a></li>
-								<li><a href="./aboutsite.html"><ion-icon name="compass"></ion-icon> 关于网站</a></li>
+								<li><a href="./aboutus.html"><i class="icon ion-md-contact"></i> 关于我们</a></li>
+								<li><a href="./aboutsite.html"><i class="icon ion-md-compass"></i> 关于网站</a></li>
 							</ul>
 						</div>
 				</div>
@@ -81,8 +81,8 @@
 			<div class="col-lg-8">
 				<!-- 路径导航、菜单工具栏  start -->
 				<ol class="breadcrumb">
-					<li class="active"><a href="#"><ion-icon name="globe"></ion-icon> 数据</a></li>
-					<section class="g-search"><form><input id="input-value" type="search" placeholder="你想找什么？"><a id="g-search"><ion-icon name="search"></ion-icon></a></form><p class="warning">查询字段不能为空</p></section>
+					<li class="active"><a href="#"><i class="icon ion-md-globe"></i> 数据</a></li>
+					<section class="g-search"><form><input id="input-value" type="search" placeholder="你想找什么？"><a id="g-search"><i class="icon ion-md-search"></i></a></form><p class="warning">查询字段不能为空</p></section>
 				</ol>
 				<div class="row">
 					<div class="col-md-8">
@@ -120,7 +120,6 @@
 	
 	<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-	<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 	
 	<script src="../js/common.js" type="text/javascript"></script>
 	<script src="../js/cpop.js" type="text/javascript"></script>
