--- a/html/journal.html
+++ b/html/journal.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/journal.css">
 	<link type="image/png" href="../img/logo.ico" rel="shortcut icon">
     <title>GeoScience | 期刊指南</title>
 </head>
@@ -84,27 +85,52 @@
 					<li class="active"><a href="#"><i class="icon ion-md-filing"></i> 期刊</a></li>
 					<section class="g-search"><form><input id="input-value" type="search" placeholder="你想找什么？"><a id="g-search"><i class="icon ion-md-search"></i></a></form><p class="warning">查询字段不能为空</p></section>
 				</ol>
+				<div class="page-title"><i class="icon ion-md-globe"></i> 期刊投稿指南</div>
+				<hr>
 				<div class="row">
-					<div class="col-md-8">
-						8
+					<div class="col-md-3">
+						<div class="portlet journal-type-list">
+							<div class="journal-type-list-title">领域列表</div>
+							<hr>
+							<a href="###" id="journal-type-01">地理学领域期刊 Top10</a>
+							<a href="###" id="journal-type-02">遥感领域期刊 Top10</a>
+							<a href="###" id="journal-type-03">环境领域期刊 Top10</a>
+						</div>
 					</div>
-					<div class="col-md-4">
-						4
+					<div class="col-md-3">
+						<div class="portlet journal-list">
+							<div class="journal-list-title">期刊列表</div>
+							<hr>
+							<div>
+								<!-- Nav tabs -->
+								<ul class="nav nav-tabs" role="tablist">
+									<li role="presentation" class="active"><a href="#journal-sci" aria-controls="journal-sci" role="tab" data-toggle="tab">SCI</a></li>
+									<li role="presentation"><a href="#journal-cscd" aria-controls="journal-cscd" role="tab" data-toggle="tab">中文核心</a></li>
+								</ul>
+								<!-- Tab panes -->
+								<div class="tab-content">
+									<div role="tabpanel" class="tab-pane active" id="journal-sci">
+										<a href="###" id="type-01-journal-01-sci">Remote Sensing of Environment</a>
+										<a href="###" id="type-01-journal-02-sci">Tatal of Environment</a>
+										<a href="###" id="type-01-journal-03-sci">Remote Sensing</a>
+									</div>
+									<div role="tabpanel" class="tab-pane" id="journal-cscd">
+										<a href="###" id="type-01-journal-01-cscd">地理科学进展</a>
+										<a href="###" id="type-01-journal-02-cscd">地球信息科学学报</a>
+										<a href="###" id="type-01-journal-03-cscd">遥感学报</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="portlet journal-info">
+							<div class="journal-info-title">期刊详细信息</div>
+							<hr>
+							期刊详细信息
+						</div>
 					</div>
 				</div>
-				<!-- 各个版块 -->
-				<div class="row">
-					<div class="col-sm-4">
-						4
-					</div>
-					<div class="col-sm-4">
-						4
-					</div>
-					<div class="col-sm-4">
-						4
-					</div>
-				</div>
-				<!-- 其他 -->
 				<!-- Links and follow us -->
 				<div id="followus"></div>
 				
