--- a/html/data.html
+++ b/html/data.html
@@ -89,30 +89,39 @@
 				<hr>
 				<div class="row">
 					<div class="col-md-8">
+						<label>搜索关键词：</label>
+						<div class="input-group percent-80">
+							<span class="input-group-addon" id="basic-addon1">关键词：</span>
+							<input type="text" class="form-control" placeholder="Search for...">
+							<span class="input-group-btn">
+								<button id="query-01" class="btn btn-primary" type="button">搜索</button>
+							</span>
+						</div>
 						<label>数据筛选：</label>
 						<div id="option-box" class="shadow-md">
 							<dl>
 								<dt>学科类型：</dt>
-								<dd>地理</dd>
-								<dd>水文</dd>
-								<dd>地质</dd>
-								<dd>环境</dd>
-								<dd>GIS</dd>
-								<dd>遥感</dd>
+								<dd id="type-01">地理</dd>
+								<dd id="type-02">水文</dd>
+								<dd id="type-03">地质</dd>
+								<dd id="type-04">环境</dd>
+								<dd id="type-05">GIS</dd>
+								<dd id="type-06">遥感</dd>
 							</dl>
 							<dl>
 								<dt>数据格式：</dt>
-								<dd>矢量</dd>
-								<dd>栅格</dd>
-								<dd>其他</dd>
+								<dd id="format-01">矢量</dd>
+								<dd id="format-02">栅格</dd>
+								<dd id="format-03">其他</dd>
 							</dl>
 							<dl>
 								<dt>收费形式：</dt>
-								<dd>免费</dd>
-								<dd>付费</dd>
+								<dd id="price-01">免费</dd>
+								<dd id="price-02">付费</dd>
 							</dl>
 							<dl class="select">
 								<dt>已选条件：</dt>
+								<button id="query-02" class="btn btn-warning pull-right" type="button" style="margin-top:7px">查询</button>
 							</dl>
 						</div>
 						<div class="item-block">
@@ -123,14 +132,6 @@
 						</div>
 					</div>
 					<div class="col-md-4">
-						<label>搜索关键词：</label>
-						<div class="input-group percent-80">
-							<span class="input-group-addon" id="basic-addon1">关键词：</span>
-							<input type="text" class="form-control" placeholder="Search for...">
-							<span class="input-group-btn">
-								<button class="btn btn-primary" type="button">搜索</button>
-							</span>
-						</div>
 						<div class="item-block">
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-pricetags"></i><span> 标签云</span></p>
@@ -172,7 +173,7 @@
 	<script src="../js/cpop.js" type="text/javascript"></script>
 	<script>
 		var dls = document.querySelectorAll('dl:not(.select)');
-		var selected=document.querySelector('.select');
+		var selected = document.querySelector('.select');
 		for (var i = 0; i < dls.length; i++) {
 			dls[i].mark=false;	//给每一行的dl标签添加一条属性，用于对应下面的dd标签。我们约定如果这个属性的值为true表示对应的标签没有创建。如果值为false表示对应的标签已经创建了
 			select(i);
@@ -185,7 +186,6 @@
 			for (var i = 0; i < dds.length; i++) {
 				dds[i].onclick = function () {
 					//给当前点击的添加一个高亮
-					//prev && (prev.className = '');
 					if(prev){
 						prev.className = ''
 					}
@@ -195,15 +195,16 @@
 					var parent=this.parentNode;
 					if(!parent.mark){	//这个条件满足说明对应的dd标签还没有创建
 						dd=document.createElement('dd');
-						dd.innerHTML=this.innerHTML;
+						dd.innerHTML="<i>" + this.innerHTML + "</i>";
 						selected.appendChild(dd);
 						parent.mark=true;
 						
 					}else{
 						//走这里的时候说明对应的标签已经创建了，只需要把内容修改了就可以了
-						dd.innerHTML=this.innerHTML;
+						dd.innerHTML="<i>" + this.innerHTML + "</i>";
 					}
-					var span=document.createElement('span');
+					//alert(dd.innerHTML);
+					var span = document.createElement('span');
 					var This=this;
 					span.innerHTML='X';
 					span.onclick=function(){
@@ -222,6 +223,20 @@
 				};
 			}
 		}
+		
+		$("#query-01").click(function() {
+			alert("关键字查询");
+		});
+		
+		$("#query-02").click(function() {
+			var selectList = new Array();
+			var slen = $(".select i").length;
+			for(var i = 0; i < slen; i++) {
+				selectList.push($(".select i").eq(i).html());
+			}
+			alert(selectList.join(";"))
+		});
+		
 	</script>
 </body>
 
