--- a/html/journal.html
+++ b/html/journal.html
@@ -91,16 +91,20 @@
 					<div class="col-lg-12">
 						<div class="classes-wrap content clearfix">
 							<div class="classes-item active">
-								<i class="icon icon-login"></i>
+								<i class="icon icon-satellite"></i>
 								<span class="text">遥感</span>
 							</div>
 							<div class="classes-item">
-								<i class="icon icon-config"></i>
+								<i class="icon icon-globe"></i>
 								<span class="text">地学</span>
 							</div>
 							<div class="classes-item">
-								<i class="icon icon-award"></i>
+								<i class="icon icon-rain"></i>
 								<span class="text">水文</span>
+							</div>
+							<div class="classes-item">
+								<i class="icon icon-compute"></i>
+								<span class="text">计算机</span>
 							</div>
 						</div>
 						<!--内容-->
