--- a/html/data.html
+++ b/html/data.html
@@ -115,9 +115,9 @@
 								<dd id="format-03">其他</dd>
 							</dl>
 							<dl>
-								<dt>收费形式：</dt>
-								<dd id="price-01">免费</dd>
-								<dd id="price-02">付费</dd>
+								<dt>获取方式：</dt>
+								<dd id="online-01">在线</dd>
+								<dd id="online-02">离线</dd>
 							</dl>
 							<dl class="select">
 								<dt>已选条件：</dt>
