--- a/html/journal.html
+++ b/html/journal.html
@@ -111,14 +111,36 @@
 						<!--1-->
 						<div class="list-wrap content active">
 							<h3 class="classes-title list-title">
-								<i class="icon-question"></i>
+								<i class="icon-list"></i>
 								<span class="list-title-text">遥感领域期刊</span>
 							</h3>
 							<div id="list-wrap-content">
 								<div class="list-content">
 									<div class="row">
 										<div class="col-md-5 journal-name-list" id="journal-rs"></div>
-										<div class="col-md-7 journal-info"></div>
+										<div class="col-md-7 journal-info">
+											<div class="journal-info-name">Remote Sensing of Environment</div>
+											<div class="journal-info-abbre">Remote Sens. Environ. | ISSN: 0034-4257</div>
+											<div class="journal-info-intro">期刊简介：var 博客主题 = 'GIS、遥感学科方向,个人综合类博客' var 网站主旨 = '记录生活，记录学习，分享快乐'</div>
+											<div class="journal-info-scope"><span class="journal-info-scope-title">期刊领域</span>GIS、遥感、地球系统科学、全球变化GIS、遥感、地球系统科学、全球变化GIS、遥感、地球系统科学、全球变化、遥感、地球系统科学、全球变化、遥感、地球系统科学、全球变化、遥感、地球系统科学、全球变化GIS</div>
+											<div class="journal-info-href">官方网址：<a href="http://gaohr.win">http://gaohr.win</a></div>
+											<hr>
+											<div class="row journal-info-selfcite">
+												<div class="col-xs-6">OA 开放 &nbsp;&nbsp;<i class="icon ion-md-checkmark-circle-outline journal-info-top-status g-color-green"></i> <i class="icon ion-md-close-circle-outline journal-info-top-status g-color-red"></i></div>
+												<div class="col-xs-6"><div id="self-citation"></div></div>
+											</div>
+											
+											<div class="row journal-info-top">
+												<div class="col-xs-6 journal-info-top-text">TOP 期刊 &nbsp;&nbsp;<i class="icon ion-md-checkmark-circle-outline journal-info-top-status g-color-green"></i> <i class="icon ion-md-close-circle-outline journal-info-top-status g-color-red"></i></div>
+												<div class="col-xs-6 journal-info-zone">分区：&nbsp;&nbsp;<span class="journal-info-zone-text">二区</span></div>
+											</div>
+											<hr>
+											<div class="journal-info-if">
+												<p class="journal-info-if-title">影响因子趋势图<p>
+												<div class="journal-info-if-chart" id="chart"></div>
+											</div>
+											
+										</div>
 									</div>
 								</div>
 							</div>
@@ -126,7 +148,7 @@
 						<!--2-->
 						<div class="list-wrap content">
 							<h3 class="classes-title list-title">
-								<i class="icon-question"></i>
+								<i class="icon-list"></i>
 								<span class="list-title-text">地学领域期刊</span>
 							</h3>
 							<div id="list-wrap-content">
@@ -141,7 +163,7 @@
 						<!--3-->
 						<div class="list-wrap content">
 							<h3 class="classes-title list-title">
-								<i class="icon-question"></i>
+								<i class="icon-list"></i>
 								<span class="list-title-text">水文领域期刊</span>
 							</h3>
 							<div id="list-wrap-content">
@@ -156,7 +178,7 @@
 						<!--4-->
 						<div class="list-wrap content">
 							<h3 class="classes-title list-title">
-								<i class="icon-question"></i>
+								<i class="icon-list"></i>
 								<span class="list-title-text">计算机领域期刊</span>
 							</h3>
 							<div id="list-wrap-content">
@@ -185,6 +207,8 @@
 	
 	<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+	<script src="../js/jquery.lineProgressbar.js"></script>
+	<script src="../js/echarts.min.js"></script>
 	
 	<script src="../js/common.js" type="text/javascript"></script>
 	<script src="../js/journal-list.js" type="text/javascript"></script>
@@ -212,7 +236,18 @@
 				$("#journal-hydro").append("<a href='###' id='" + journal_hydro[i].id + "' onclick='displayInfo(\"" + journal_hydro[i].id + "\")' class='journal-name'><span class='rank-" + journal_hydro[i].rank + "'>" + journal_hydro[i].rank + "</span>" + journal_hydro[i].name + "</a>");
 			}
 			
-		})
+			////////
+			$('#self-citation').LineProgressbar({
+				percentage: 50
+			});
+			
+			////////
+			var chart = echarts.init(document.getElementById("chart"));
+			chart.showLoading();
+			chart.hideLoading();
+			var charts = {unit: 'IF',names: ['影响因子'],lineX: ['2016','2017','2018','2019'],value: [1.1, 1.2, 1.5, 1.48]}
+			var data = {name: charts.names[0],type: 'line',lineStyle: {normal: {width: 5,color:'rgba(0, 255, 255, 1)'}},color: 'rgba(0, 155, 255)',smooth: true,areaStyle: {normal: {color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{offset: 0,color: 'rgba(0, 155, 255, 0.8)'}, {offset: 0.8,color: 'rgba(0, 155, 255, 0)'}], false),shadowColor: 'rgba(0, 0, 0, 0.1)'}},symbolSize: 8,data: charts.value}
+			chart.setOption({backgroundColor:'#002',title: {text: '影响因子走势图',left: 'center',textStyle: {color:'rgba(255, 255, 255, 0.8)'}},tooltip: {trigger: 'axis'},legend: {data: charts.names,textStyle: {fontSize: 16,color: 'rgb(0,253,255,0.8)'},right: '4%'},grid: {top: '15%',left: '4%',right: '4%',bottom: '12%',containLabel: true},xAxis: {type: 'category',boundaryGap: false,data: charts.lineX,axisLabel: {textStyle: {color: 'rgb(0,253,255,0.8)'},fontSize: 16}},yAxis: {name: charts.unit,type: 'value',axisLabel: {formatter: '{value}',textStyle: {color: 'rgb(0,253,255,0.8)'},fontSize: 16},splitLine: {lineStyle: {color: 'rgb(23,255,243,0.3)'}},axisLine: {lineStyle: {color: 'rgb(0,253,255,0.8)'}}},series: data});})
 		
 		function displayInfo(id) {
 			if(currentEle != "") {
