--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-heart"></i><span> 关注我们</span></p>
 								<div class="row">
-									<div class="col-xs-6 text-center">
+									<div class="col-xs-6 text-center focusus">
 										<p><i class="icon-wechat"></i>微信公众号</p>
 										<img src="img/brand/wechat-code.jpg">
 									</div>
-									<div class="col-xs-6 text-center">
+									<div class="col-xs-6 text-center focusus">
 										<p><i class="icon-sina"></i>官方微博</p>
 										<img src="img/brand/sina-code.jpg">
 									</div>
