--- a/html/data.html
+++ b/html/data.html
@@ -88,7 +88,7 @@
 				<div class="page-title"><i class="icon ion-md-globe"></i> 数据资源</div>
 				<hr>
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-md-9">
 						<label>搜索关键词：</label>
 						<div class="input-group percent-80">
 							<span class="input-group-addon" id="basic-addon1">关键词：</span>
@@ -127,11 +127,11 @@
 						<div class="item-block">
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-pricetags"></i><span> 数据列表</span></p>
-								
+								<div class="row" id="data-list"></div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-3">
 						<div class="item-block">
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-pricetags"></i><span> 标签云</span></p>
@@ -170,73 +170,13 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 	
 	<script src="../js/common.js" type="text/javascript"></script>
+	<script src="../js/data-list.js" type="text/javascript"></script>
+	<script src="../js/data.js" type="text/javascript"></script>
 	<script src="../js/cpop.js" type="text/javascript"></script>
 	<script>
-		var dls = document.querySelectorAll('dl:not(.select)');
-		var selected = document.querySelector('.select');
-		for (var i = 0; i < dls.length; i++) {
-			dls[i].mark=false;	//给每一行的dl标签添加一条属性，用于对应下面的dd标签。我们约定如果这个属性的值为true表示对应的标签没有创建。如果值为false表示对应的标签已经创建了
-			select(i);
-		}
-		function select(n) {
-			var dds = dls[n].querySelectorAll('dd');
-			var prev=null;
-			var dd=null;	//每一行都需要创建一个dd标签，放到这里是为了如果标签已经被创建了，通过这个变量能够找到这个标签
-
-			for (var i = 0; i < dds.length; i++) {
-				dds[i].onclick = function () {
-					//给当前点击的添加一个高亮
-					if(prev){
-						prev.className = ''
-					}
-					this.className = 'active';
-					prev = this;
-					//创建dd标签
-					var parent=this.parentNode;
-					if(!parent.mark){	//这个条件满足说明对应的dd标签还没有创建
-						dd=document.createElement('dd');
-						dd.innerHTML="<i>" + this.innerHTML + "</i>";
-						selected.appendChild(dd);
-						parent.mark=true;
-						
-					}else{
-						//走这里的时候说明对应的标签已经创建了，只需要把内容修改了就可以了
-						dd.innerHTML="<i>" + this.innerHTML + "</i>";
-					}
-					//alert(dd.innerHTML);
-					var span = document.createElement('span');
-					var This=this;
-					span.innerHTML='X';
-					span.onclick=function(){
-						//alert(1);
-						/*
-							点击关闭后要做的事情
-								1、移除掉dd
-								2、把上面点击的那个class去掉
-								3、父级身上的mark属性要更新
-						 */
-						selected.removeChild(dd);
-						This.className='';
-						parent.mark=false;
-					};
-					dd.appendChild(span);
-				};
-			}
-		}
-		
-		$("#query-01").click(function() {
-			alert("关键字查询");
-		});
-		
-		$("#query-02").click(function() {
-			var selectList = new Array();
-			var slen = $(".select i").length;
-			for(var i = 0; i < slen; i++) {
-				selectList.push($(".select i").eq(i).html());
-			}
-			alert(selectList.join(";"))
-		});
-		
+		$(function () {
+			$('[data-toggle="popover"]').popover()
+		})
 	</script>
 </body>
 
