--- a/html/data.html
+++ b/html/data.html
@@ -121,7 +121,8 @@
 							</dl>
 							<dl class="select">
 								<dt>已选条件：</dt>
-								<button id="query-02" class="btn btn-warning pull-right" type="button" style="margin-top:7px">查询</button>
+								<button id="show-all-data" onclick="getAllData()" class="btn btn-warning pull-right" type="button" style="margin-top:7px;margin-left:7px">全部</button>
+								<button id="query-02" class="btn btn-primary pull-right" type="button" style="margin-top:7px">查询</button>
 							</dl>
 						</div>
 						<div class="item-block">
@@ -135,21 +136,11 @@
 						<div class="item-block">
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-pricetags"></i><span> 标签云</span></p>
-								
+								<div style="padding-top:10px">
+									<div id="data-tags"></div>
+								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<!-- 各个版块 -->
-				<div class="row">
-					<div class="col-sm-4">
-						4
-					</div>
-					<div class="col-sm-4">
-						4
-					</div>
-					<div class="col-sm-4">
-						4
 					</div>
 				</div>
 				<!-- 其他 -->
