--- a/html/data.html
+++ b/html/data.html
@@ -92,7 +92,7 @@
 						<label>搜索关键词：</label>
 						<div class="input-group percent-80">
 							<span class="input-group-addon" id="basic-addon1">关键词：</span>
-							<input type="text" class="form-control" placeholder="Search for...">
+							<input type="text" class="form-control" placeholder="Search for..." id="query-value">
 							<span class="input-group-btn">
 								<button id="query-01" class="btn btn-primary" type="button">搜索</button>
 							</span>
