--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						<div class="item-block">
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-filing"></i><span> 期刊指南</span><a href="./html/journal.html">[more...]</a></p>
-								
+								<div id="index-journal-list"></div>
 							</div>
 						</div>
 					</div>
@@ -161,7 +161,7 @@
 						<div class="item-block">
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-globe"></i><span> 数据发布</span><a href="./html/data.html">[more...]</a></p>
-								
+								<div id="index-data-list"></div>
 							</div>
 						</div>
 					</div>
@@ -266,6 +266,11 @@
 	
 	<script src="./js/common.js" type="text/javascript"></script>
 	<script src="./js/cpop.js" type="text/javascript"></script>
+	
+	<script src="./js/journal-list.js" type="text/javascript"></script>
+	<script src="./js/data-list.js" type="text/javascript"></script>
+	<script src="./js/index.js" type="text/javascript"></script>
+	
 	<script>
 		$('.carousel').carousel({
 			interval: 2000
