--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<div class="item-block">
 							<div class="portlet">
 								<p class="portlet-title"><i class="icon ion-md-contacts"></i><span> 会议通知</span><a href="./html/conference.html">[more...]</a></p>
-								
+								<div id="index-conference-list"></div>
 							</div>
 						</div>
 					</div>
@@ -268,6 +268,7 @@
 	<script src="./js/cpop.js" type="text/javascript"></script>
 	
 	<script src="./js/journal-list.js" type="text/javascript"></script>
+	<script src="./js/conference-list.js" type="text/javascript"></script>
 	<script src="./js/data-list.js" type="text/javascript"></script>
 	<script src="./js/index.js" type="text/javascript"></script>
 	
